fix some issues

--- a/frontend/src/components/post/Post.module.css
+++ b/frontend/src/components/post/Post.module.css
@@ -13,9 +13,13 @@
     cursor: pointer;
 }
 
+.navigateLink{
+    text-decoration: none;
+    color: inherit;
+}
+
 .postTopContainer{
-    width: 100%;
-    display: flex;
+    display: inline-flex;
     gap: 20px;
     padding: 8px;
 }
