--- a/frontend/src/components/menu-popup/DeletePopUp.module.css
+++ b/frontend/src/components/menu-popup/DeletePopUp.module.css
@@ -1,7 +1,6 @@
 .deleteMenuList{
     width: 300px;
     height: 180px;
-    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -19,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    padding: 10px;
 }
 
 .menuContext{
@@ -46,5 +46,9 @@
 }
 
 .menuButton:first-of-type{
-    color: red;
+    color: #ed4956;
+}
+
+.menuButton:hover{
+    background-color: var(--menuBgHover);
 }
