--- a/frontend/src/components/menu-popup/PopUp.module.css
+++ b/frontend/src/components/menu-popup/PopUp.module.css
@@ -11,7 +11,6 @@
 
 .menuList{
     width: 250px;
-    height: 200px;
     background-color: var(--menuBg);
     border-radius: 8px;
     position: absolute;
@@ -21,11 +20,11 @@
 }
 
 .menuButton{
-   cursor: pointer;
+    cursor: pointer;
     font-size: 0.95rem;
     border-top: 1px solid rgba(124, 124, 124, 0.5);
     width: 100%;
-    height: calc(100%/3);
+    height: 66px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,6 +38,6 @@
     border-top: 0;
 }
 
-.menuButton:last-child{
+.redColor{
     color: #ed4956;
 }
