added followers, following pages

--- a/frontend/src/pages/profile/Profile.module.css
+++ b/frontend/src/pages/profile/Profile.module.css
@@ -57,6 +57,10 @@
     flex-wrap: wrap;
 }
 
+.link{
+    text-decoration: none;
+    color: inherit;
+}
 
 .profileUsername{
     font-weight: 300;
