--- a/frontend/src/pages/search/SearchPage.module.css
+++ b/frontend/src/pages/search/SearchPage.module.css
@@ -90,4 +90,8 @@
     .inputContainer, .seachUserContainer{
         width: 100%;
     }
+
+    .searchContainer{
+        min-height: calc(100vh - 80px);
+    }
 }
